Style: Added Responsive styles for header

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                         <span></span>
                     </div>
                     <nav class="sections">
+                        <div class="menu-close-btn">&times;</div>
                         <ul>
                             <li><a href="#" class="section-link">Shop</a></li>
                             <li><a href="#" class="section-link">Men</a></li>
