Added Banner html and styles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <meta name="author" content="Euphoria">
 
         <!-- Mobile App Capability Tags -->
-        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="apple-mobile-web-app-title" content="Euphoria">
 
@@ -50,7 +50,7 @@
                 <div class="left">
                     <h1 class="logo">
                         <a href="index.html">
-                            <img src="/assets/images/Logo.svg" alt="Euphoria Logo">
+                            <img src="/assets/images/Logo.svg" alt="Euphoria Logo" />
                         </a>
                     </h1>
                     <div class="hamburger">
@@ -72,7 +72,7 @@
                 <!-- header > .wrapper > .header-styles > .left  -->
                 <div class="right">
                     <div class="search">
-                        <img src="/assets/images/search.svg" alt="Search Icon">
+                        <img src="/assets/images/search.svg" alt="Search Icon" />
                         <input type="text" placeholder="Search">
                     </div>
                     <div class="profile-cart">
@@ -89,5 +89,33 @@
             <!-- header > .wrapper -->
         </header>
         <!-- header -->
+
+        <!-- .banner section -->
+        <section class="banner">
+            <!-- Navigation arrows -->
+            <div class="banner-nav">
+                <!-- <a href="#" class="nav-arrow prev"><img src="/assets/images/left-arrow-bold.svg" alt="left arrow white" /></a>
+                <a href="#" class="nav-arrow next"><img src="/assets/images/right-arrow-bold.svg" alt="right arrow white" /></a> -->
+                <button class="nav-arrow prev">&#10094;</button>
+                <button class="nav-arrow next">&#10095;</button> 
+            </div>
+
+            <!-- Content overlay -->
+             <div class="banner-content">
+                <div class="banner-category text">T-Shirt / Tops</div>
+                <h1 class="banner-title text">Summer Value Pack</h1>
+                <div class="banner-subtitle text">cool / colorful / comfy</div>
+                <button class="shop-now-btn text">Shop Now</button>
+            </div>
+
+            <!-- Indicator Dots -->
+            <div class="banner-indicator">
+                <div class="indicator-dot active"></div>
+                <div class="indicator-dot"></div>
+                <div class="indicator-dot"></div>
+            </div>
+        </section>
+        <!-- .banner section -->
+
     </body>
 </html>
