Added Styles for Responsive Header
On click functionality on components

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                     <nav class="sections">
                         <div class="menu-close-btn">&times;</div>
                         <ul>
-                            <li><a href="#" class="section-link">Shop</a></li>
-                            <li><a href="#" class="section-link">Men</a></li>
-                            <li><a href="#" class="section-link">Women</a></li>
-                            <li><a href="#" class="section-link">Combos</a></li>
-                            <li><a href="#" class="section-link">Joggers</a></li>
+                            <li><a href="#shop" class="section-link">Shop</a></li>
+                            <li><a href="#men" class="section-link">Men</a></li>
+                            <li><a href="#women" class="section-link">Women</a></li>
+                            <li><a href="#combos" class="section-link">Combos</a></li>
+                            <li><a href="#joggers" class="section-link">Joggers</a></li>
                         </ul>
                     </nav>
                 </div>
