Added Responsive styles for banner
Deals Section added

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             </div>
         </div>
         <!-- Theme toggle button -->
+
         <!-- Header -->
         <header>
             <section class="wrapper">
@@ -61,7 +62,7 @@
                     <nav class="sections">
                         <div class="menu-close-btn">&times;</div>
                         <ul>
-                            <li><a href="#shop" class="section-link">Shop</a></li>
+                            <li><a href="#deals" class="section-link">Shop</a></li>
                             <li><a href="#men" class="section-link">Men</a></li>
                             <li><a href="#women" class="section-link">Women</a></li>
                             <li><a href="#combos" class="section-link">Combos</a></li>
@@ -117,5 +118,28 @@
         </section>
         <!-- .banner section -->
 
+        <!-- #deals -->
+         <section id="deals">
+            <section class="wrapper">
+                <div class="deal-container">
+                    <div class="deal-section">
+                        <h3 class="deal-title">Low Price</h3>
+                        <h2 class="deal-heading">High Coziness</h2>
+                        <h5 class="deal-offer">UPTO 50% OFF</h5>
+                        <button class="explore-items">Explore Items</button>
+                    </div>
+                    <!-- #deals > .wrapper > .deal-container > .deal-section -->
+                    <div class="deal-section">
+                        <h3 class="deal-title">Beyoung Presents</h3>
+                        <h2 class="deal-heading">Breezy Summer Style</h2>
+                        <h5 class="deal-offer">UPTO 50% OFF</h5>
+                        <button class="explore-items">Explore Items</button>
+                    </div>
+                    <!-- #deals > .wrapper > .deal-container > .deal-section -->
+                </div>
+                <!-- #deals > .wrapper > .deal-container -->
+            </section>
+         </section>
+        <!-- #deals -->
     </body>
 </html>
