Added Html code for new arrivals section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
         <script src="/assets/js/index.js"></script>
     </head>
     <body>
-
         <!-- Theme toggle button -->
         <div class="theme-toggle" id="themeToggle">
             <div class="theme-icons">
@@ -141,5 +140,38 @@
             </section>
          </section>
         <!-- #deals -->
+
+        <!-- #new-arrivals -->
+         <section id="new-arrivals">
+            <section class="wrapper">
+                <section class="new-arrivals-container">
+                    <h2>New Arrival</h2>
+                     <div class="navigation">
+                            <div class="nav-arrow prev"><img src="/assets/images/arrow-left.svg" alt="left arrow" /></div>
+                            <div class="nav-arrow next"><img src="/assets/images/arrow-right.svg" alt="right arrow" /></div>
+                        </div>
+                    <div class="showcase-container">
+    
+                        <div class="group">
+                            <img src="./assets/images/img-1.jpg" alt="img 1" class="showcase-image" />
+                            <h4 class="showcase-title">Knitted Joggers</h4>
+                        </div>
+                        <div class="group">
+                            <img src="./assets/images/img-3.jpg" alt="img 3" class="showcase-image" />
+                            <h4 class="showcase-title">Full Sleeve</h4>
+                        </div>
+                        <div class="group">
+                            <img src="./assets/images/img-4.jpg" alt="img 4" class="showcase-image" />
+                            <h4 class="showcase-title">Active T-Shirts</h4>
+                        </div>
+                        <div class="group">
+                            <img src="./assets/images/img-2.jpg" alt="img 2" class="showcase-image" />
+                            <h4 class="showcase-title">Urban Shirts</h4>
+                        </div>
+                    </div>
+                </section>
+            </section>
+         </section>
+        <!-- #new-arrivals -->
     </body>
 </html>
