Added Scroll animation

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <!-- header -->
 
         <!-- .banner section -->
-        <section class="banner">
+        <section class="banner scroll-animation">
             <!-- Navigation arrows -->
             <div class="banner-nav">
                 <!-- <a href="#" class="nav-arrow prev"><img src="/assets/images/left-arrow-bold.svg" alt="left arrow white" /></a>
@@ -101,7 +101,7 @@
             </div>
 
             <!-- Content overlay -->
-             <div class="banner-content">
+             <div class="banner-content scroll-animation">
                 <div class="banner-category text">T-Shirt / Tops</div>
                 <h1 class="banner-title text">Summer Value Pack</h1>
                 <div class="banner-subtitle text">cool / colorful / comfy</div>
@@ -109,7 +109,7 @@
             </div>
 
             <!-- Indicator Dots -->
-            <div class="banner-indicator">
+            <div class="banner-indicator scroll-animation">
                 <div class="indicator-dot active"></div>
                 <div class="indicator-dot"></div>
                 <div class="indicator-dot"></div>
@@ -118,17 +118,17 @@
         <!-- .banner section -->
 
         <!-- #deals -->
-         <section id="deals">
+        <section id="deals">
             <section class="wrapper">
                 <div class="deal-container">
-                    <div class="deal-section">
+                    <div class="deal-section scroll-animation">
                         <h3 class="deal-title">Low Price</h3>
                         <h2 class="deal-heading">High Coziness</h2>
                         <h5 class="deal-offer">UPTO 50% OFF</h5>
                         <button class="explore-items">Explore Items</button>
                     </div>
                     <!-- #deals > .wrapper > .deal-container > .deal-section -->
-                    <div class="deal-section">
+                    <div class="deal-section scroll-animation">
                         <h3 class="deal-title">Beyoung Presents</h3>
                         <h2 class="deal-heading">Breezy Summer Style</h2>
                         <h5 class="deal-offer">UPTO 50% OFF</h5>
@@ -143,15 +143,14 @@
 
         <!-- #new-arrivals -->
          <section id="new-arrivals">
-            <section class="wrapper">
-                <section class="new-arrivals-container">
-                    <h2>New Arrival</h2>
-                     <div class="navigation">
+            <div class="navigation">
                             <div class="nav-arrow prev"><img src="/assets/images/arrow-left.svg" alt="left arrow" /></div>
                             <div class="nav-arrow next"><img src="/assets/images/arrow-right.svg" alt="right arrow" /></div>
                         </div>
+            <section class="wrapper">
+                <section class="new-arrivals-container">
+                    <h2>New Arrival</h2>
                     <div class="showcase-container">
-    
                         <div class="group">
                             <img src="./assets/images/img-1.jpg" alt="img 1" class="showcase-image" />
                             <h4 class="showcase-title">Knitted Joggers</h4>
