Added carousel functionality for new arrivals container

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <!-- CSS Stylesheets -->
         <link rel="stylesheet" href="/assets/css/index.css">
         <script src="/assets/js/index.js"></script>
+        <script src="/assets/js/carousel.js"></script>
     </head>
     <body>
         <!-- Theme toggle button -->
@@ -65,7 +66,7 @@
                             <li><a href="#men" class="section-link">Men</a></li>
                             <li><a href="#women" class="section-link">Women</a></li>
                             <li><a href="#combos" class="section-link">Combos</a></li>
-                            <li><a href="#joggers" class="section-link">Joggers</a></li>
+                            <li><a href="#new-arrivals" class="section-link">Joggers</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -148,7 +149,7 @@
                             <div class="nav-arrow next"><img src="/assets/images/arrow-right.svg" alt="right arrow" /></div>
                         </div>
             <section class="wrapper">
-                <section class="new-arrivals-container">
+                <section class="new-arrivals-container scroll-animation">
                     <h2>New Arrival</h2>
                     <div class="showcase-container">
                         <div class="group">
