Extra Products added in new arrivals

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
 
             <!-- Indicator Dots -->
-            <div class="banner-indicator scroll-animation">
+            <div class="banner-indicator">
                 <div class="indicator-dot active"></div>
                 <div class="indicator-dot"></div>
                 <div class="indicator-dot"></div>
@@ -145,13 +145,29 @@
         <!-- #new-arrivals -->
          <section id="new-arrivals">
             <div class="navigation">
-                            <div class="nav-arrow prev"><img src="/assets/images/arrow-left.svg" alt="left arrow" /></div>
-                            <div class="nav-arrow next"><img src="/assets/images/arrow-right.svg" alt="right arrow" /></div>
+                            <div class="nav-arrow prev" title="Previous"><img src="/assets/images/arrow-left.svg" alt="left arrow" /></div>
+                            <div class="nav-arrow next" title="Next"><img src="/assets/images/arrow-right.svg" alt="right arrow" /></div>
                         </div>
             <section class="wrapper">
                 <section class="new-arrivals-container scroll-animation">
                     <h2>New Arrival</h2>
                     <div class="showcase-container">
+                        <div class="group">
+                            <img src="./assets/images/img-1.jpg" alt="img 1" class="showcase-image" />
+                            <h4 class="showcase-title">Knitted Joggers</h4>
+                        </div>
+                        <div class="group">
+                            <img src="./assets/images/img-3.jpg" alt="img 3" class="showcase-image" />
+                            <h4 class="showcase-title">Full Sleeve</h4>
+                        </div>
+                        <div class="group">
+                            <img src="./assets/images/img-4.jpg" alt="img 4" class="showcase-image" />
+                            <h4 class="showcase-title">Active T-Shirts</h4>
+                        </div>
+                        <div class="group">
+                            <img src="./assets/images/img-2.jpg" alt="img 2" class="showcase-image" />
+                            <h4 class="showcase-title">Urban Shirts</h4>
+                        </div>
                         <div class="group">
                             <img src="./assets/images/img-1.jpg" alt="img 1" class="showcase-image" />
                             <h4 class="showcase-title">Knitted Joggers</h4>
