Fashion section HTML and CSS Added

--- a/index.html
+++ b/index.html
@@ -189,5 +189,28 @@
             </section>
          </section>
         <!-- #new-arrivals -->
+
+        <!-- #fashion -->
+        <section id="fashion">
+            <section class="wrapper">
+                <section class="fashion-container scroll-animation">
+                    <div class="left-section">
+                        <div class="content">
+                            <h2>WE MADE YOUR EVERYDAY FASHION BETTER!</h2>
+                            <p>In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable & Affordable fashion 24/7</p>
+                            <button class="shop-button">Shop Now</button>
+                        </div>
+                    </div>
+                    <!-- #fashion > .fashion-container > .left-section  -->
+                    <div class="right-section">
+                        <img src="/assets/images/bg-5.jpg" alt="Fashion models in colorful outfits">
+                    </div>
+                    <!-- #fashion > .fashion-container > .right-section  -->
+                </section>
+                <!-- #fashion > .fashion-container -->
+            </section>
+            <!-- #fashion > .wrapper -->
+        </section>
+        <!-- #fashion -->
     </body>
 </html>
