mens html Added

--- a/index.html
+++ b/index.html
@@ -212,5 +212,140 @@
             <!-- #fashion > .wrapper -->
         </section>
         <!-- #fashion -->
+
+        <!-- #men -->
+         <section id="men">
+            <section class="wrapper">
+                <section class="mens-container">
+                    <h2>Categories For Men</h2>
+                    <section class="categories">
+                        <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-5.jpg" alt="Red checked shirt" />
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>Shirts</h3>
+                                <a href="" class="explore-now">Explore Now!</a>
+                                </div>
+                                <div class="arrow">
+                                    <img src="/assets/images/arrow-right.svg" alt="right arrow">
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-1 -->
+                         <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-6.jpg" alt="Printed Black shirt" />
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>Printed T-Shirt</h3>
+                                    <a href="" class="explore-now">Explore Now!</a>
+                                </div>
+                                <div class="arrow">
+                                    <img src="/assets/images/arrow-right.svg" alt="right arrow">
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-2 -->
+                         <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-7.jpg" alt="Plain T-shirt" />
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>Plain T-Shirt</h3>
+                                    <a href="" class="explore-now">Explore Now!</a>
+                                </div>
+                                <div class="arrow">
+                                    <img src="/assets/images/arrow-right.svg" alt="right arrow">
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-3 -->
+                         <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-8.jpg" alt="Polo T-shirt" />
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>Polo T-Shirt</h3>
+                                    <a href="" class="explore-now">Explore Now!</a>
+                                </div>                                
+                                <div class="arrow">
+                                    <img src="/assets/images/arrow-right.svg" alt="right arrow">
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-4 -->
+                         <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-9.jpg" alt="Hoodies & Sweatshirt" />
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                     <h3>Hoodies & Sweatshirt</h3>
+                                <a href="" class="explore-now">Explore Now!</a>
+                                </div>                              
+                                <div class="arrow">
+                                    <img src="/assets/images/arrow-right.svg" alt="right arrow">
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-5 -->
+                         <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-10.jpg" alt="Jeans" />
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>Jeans</h3>
+                                    <a href="" class="explore-now">Explore Now!</a>
+                                </div>                               
+                                <div class="arrow">
+                                    <img src="/assets/images/arrow-right.svg" alt="right arrow">
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-6 -->
+                         <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-1.jpg" alt="Active Wear" />
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>Activewear</h3>
+                                    <a href="" class="explore-now">Explore Now!</a>
+                                </div>                               
+                                <div class="arrow">
+                                    <img src="/assets/images/arrow-right.svg" alt="right arrow">
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-7 -->
+                         <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-11.jpg" alt="Boxers" />
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>Boxers</h3>
+                                    <a href="" class="explore-now">Explore Now!</a>
+                                </div>
+                                <div class="arrow">
+                                    <img src="/assets/images/arrow-right.svg" alt="right arrow">
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-8 -->
+                    </section>
+                    <!-- .categories -->
+                </section>
+                <!-- .mens-container -->
+            </section>
+            <!-- Wrapper -->
+         </section>
+        <!-- #men section end -->
     </body>
 </html>
