styles added for mens section

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         <div class="menu-close-btn">&times;</div>
                         <ul>
                             <li><a href="#deals" class="section-link">Shop</a></li>
-                            <li><a href="#men" class="section-link">Men</a></li>
-                            <li><a href="#women" class="section-link">Women</a></li>
+                            <li><a href="#mens" class="section-link">Men</a></li>
+                            <li><a href="#womens" class="section-link">Women</a></li>
                             <li><a href="#combos" class="section-link">Combos</a></li>
                             <li><a href="#new-arrivals" class="section-link">Joggers</a></li>
                         </ul>
@@ -213,8 +213,8 @@
         </section>
         <!-- #fashion -->
 
-        <!-- #men -->
-         <section id="men">
+        <!-- #mens -->
+         <section id="mens">
             <section class="wrapper">
                 <section class="mens-container">
                     <h2>Categories For Men</h2>
@@ -226,7 +226,7 @@
                             <div class="category-content">
                                 <div class="left-section">
                                     <h3>Shirts</h3>
-                                <a href="" class="explore-now">Explore Now!</a>
+                                    <a href="#" class="explore-now">Explore Now!</a>
                                 </div>
                                 <div class="arrow">
                                     <img src="/assets/images/arrow-right.svg" alt="right arrow">
@@ -241,7 +241,7 @@
                             <div class="category-content">
                                 <div class="left-section">
                                     <h3>Printed T-Shirt</h3>
-                                    <a href="" class="explore-now">Explore Now!</a>
+                                    <a href="#" class="explore-now">Explore Now!</a>
                                 </div>
                                 <div class="arrow">
                                     <img src="/assets/images/arrow-right.svg" alt="right arrow">
@@ -256,7 +256,7 @@
                             <div class="category-content">
                                 <div class="left-section">
                                     <h3>Plain T-Shirt</h3>
-                                    <a href="" class="explore-now">Explore Now!</a>
+                                    <a href="#" class="explore-now">Explore Now!</a>
                                 </div>
                                 <div class="arrow">
                                     <img src="/assets/images/arrow-right.svg" alt="right arrow">
@@ -271,7 +271,7 @@
                             <div class="category-content">
                                 <div class="left-section">
                                     <h3>Polo T-Shirt</h3>
-                                    <a href="" class="explore-now">Explore Now!</a>
+                                    <a href="#" class="explore-now">Explore Now!</a>
                                 </div>                                
                                 <div class="arrow">
                                     <img src="/assets/images/arrow-right.svg" alt="right arrow">
@@ -286,7 +286,7 @@
                             <div class="category-content">
                                 <div class="left-section">
                                      <h3>Hoodies & Sweatshirt</h3>
-                                <a href="" class="explore-now">Explore Now!</a>
+                                <a href="#" class="explore-now">Explore Now!</a>
                                 </div>                              
                                 <div class="arrow">
                                     <img src="/assets/images/arrow-right.svg" alt="right arrow">
@@ -301,7 +301,7 @@
                             <div class="category-content">
                                 <div class="left-section">
                                     <h3>Jeans</h3>
-                                    <a href="" class="explore-now">Explore Now!</a>
+                                    <a href="#" class="explore-now">Explore Now!</a>
                                 </div>                               
                                 <div class="arrow">
                                     <img src="/assets/images/arrow-right.svg" alt="right arrow">
@@ -316,7 +316,7 @@
                             <div class="category-content">
                                 <div class="left-section">
                                     <h3>Activewear</h3>
-                                    <a href="" class="explore-now">Explore Now!</a>
+                                    <a href="#" class="explore-now">Explore Now!</a>
                                 </div>                               
                                 <div class="arrow">
                                     <img src="/assets/images/arrow-right.svg" alt="right arrow">
@@ -331,7 +331,7 @@
                             <div class="category-content">
                                 <div class="left-section">
                                     <h3>Boxers</h3>
-                                    <a href="" class="explore-now">Explore Now!</a>
+                                    <a href="#" class="explore-now">Explore Now!</a>
                                 </div>
                                 <div class="arrow">
                                     <img src="/assets/images/arrow-right.svg" alt="right arrow">
@@ -346,6 +346,6 @@
             </section>
             <!-- Wrapper -->
          </section>
-        <!-- #men section end -->
+        <!-- #mens section end -->
     </body>
 </html>
